--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Image and text -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand">Generator</a>
+  <a class="navbar-brand" href="/" >Generator</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
