--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Generator</h1>
+<h1>Random String Generator</h1>
     <h1 class="display-1">{{ password }}</h1>
-    <form method="POST" action="/index">
-    <button type="submit" class="generate">Generate Another</button>
+    <form method="POST" action="/">
+        <select name="n" value="{{ n }}">
+            {% for num in nums %}
+                <option{% if num == n %} selected="selected"{% endif %}>{{ num }}</option>
+            {% endfor %}
+        </select>
+        <button type="submit" class="generate btn btn-primary">Generate Another</button>
     </form>
 {% endblock content %}
